# imsocs

./: README.md  configure.ac
config/: db_ocs_queries.xml  ocs_config.xml
src/: Makefile.am  ocs_defines.h  onlinecharging.c  onlinecharging.h
src/db_module/: Makefile.am  ocsdb.h
src/ocf/: Makefile.am  ocf.c  ocf.h  ocf_ebcf.c  ocf_ebcf.h  ocf_msgextractor.h  ocf_sbcf.h
src/ratingfunc/: Makefile.am  ratingfunc.h
trunk/: config.h.in  configure.ac
trunk/config/: ocs_dictionary.xml
trunk/src/db_module/: ocsdb.c
trunk/src/ocf/: Makefile.am  ocf_msgextractor.c  ocf_sbcf.c  ocf_session.c  ocf_session.h  ocf_statemachine.c  ocf_statemachine.h
trunk/src/ratingfunc/: ratingfunc.c
